# CAAL

./: .env.example  .gitignore  README-APPLE.md  README.md  docker-compose.apple.yaml  docker-compose.cpu.yaml  docker-compose.distributed.yml  docker-compose.yaml  nginx-distributed.conf  nginx.conf  pyproject.toml  settings.default.json  start-apple.sh  voice_agent.py
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-frontend-i18n/: 02-VERIFICATION.md
.planning/phases/03-mobile-i18n/: 03-01-SUMMARY.md
.planning/phases/04-voice-pipeline/: 04-VERIFICATION.md
.planning/phases/05-extract-en-keys/: 05-01-SUMMARY.md
.planning/phases/09-settings-schema-extension/: 09-01-SUMMARY.md
.planning/phases/10-connection-testing-endpoints/: 10-01-PLAN.md
.planning/phases/12-settings-panel-ui/: 12-RESEARCH.md
docs/: APPLE-SILICON.md  DISTRIBUTED-DEPLOYMENT.md  HOME-ASSISTANT.md  N8N-WORKFLOWS.md
frontend/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/(app)/: layout.tsx
frontend/components/app/: app.tsx  view-controller.tsx  welcome-view.tsx
frontend/components/livekit/: button.tsx
frontend/components/settings/: settings-panel.tsx
frontend/components/setup/: index.ts  integrations-step.tsx  provider-step.tsx  setup-wizard.tsx  stt-step.tsx
frontend/components/tools/: browse-tools-view.tsx  category-filter.tsx  index.ts  installed-tool-card.tsx  installed-tool-row.tsx  installed-tools-view.tsx  submission-security-dialog.tsx  tool-card.tsx  tool-detail-modal.tsx  tool-install-modal.tsx  tools-panel.tsx  workflow-detail-modal.tsx  workflow-submission-dialog.tsx
frontend/components/ui/: dialog.tsx
frontend/hooks/: useCaalTheme.ts  useConnectionErrors.tsx  useToolRegistry.ts  useWakeWord.ts
frontend/lib/: theme.ts  utils.ts  workflow-sanitizer.ts
frontend/lib/__tests__/: workflow-sanitizer.test.ts
frontend/messages/: en.json  fr.json
frontend/src/i18n/: config.ts  request.ts
frontend/styles/: globals.css
frontend/types/: tools.ts
mobile/: .env.example  README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/assets/: wakeword.ppn
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: app.dart  main.dart
src/caal/: __init__.py  registry_cache.py  settings.py  webhooks.py
(+43 files in other folders)
